# Coding_Regroup

./: README.md
ProcessRegroup/: CMakeLists.txt
ProcessRegroup/src/: testregroup.cpp
ProcessRegroup/src/Control/: monitor.cpp  monitor.h
ProcessRegroup/src/Data/: 1_sample_in.json  1_sample_out.json  1_sample_out_ext.json  1_sample_out_multi.json  1_sample_out_str.json
ProcessRegroup/src/Utility/ioProcess/: iofromjson.cpp  iofromjson.h
ProcessRegroup/src/Utility/regroupProcess/: processing.cpp  processing.h
codeReview/: PlmDatabaseId.cpp  PlmDatabaseId.h
